SERVER-50464 waitAfterCommandFinishesExecution failpoint should only execute if condition is met